// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggler is checked 1`] = `
<div
  aria-hidden="true"
  class="root"
  role="presentation"
>
  <input
    checked=""
    class="input"
    readonly=""
    type="checkbox"
  />
  <div
    class="toggler"
  >
    <span
      class="label checked"
    >
      Included
    </span>
    <span
      class="label"
    >
      Excluded
    </span>
  </div>
</div>
`;

exports[`Toggler is disabled 1`] = `
<div
  aria-hidden="true"
  class="root disabled"
  role="presentation"
>
  <input
    class="input"
    disabled=""
    readonly=""
    type="checkbox"
  />
  <div
    class="toggler"
  >
    <span
      class="label"
    >
      Included
    </span>
    <span
      class="label checked"
    >
      Excluded
    </span>
  </div>
</div>
`;

exports[`Toggler renders correctly 1`] = `
<div
  aria-hidden="true"
  class="root"
  role="presentation"
>
  <input
    class="input"
    readonly=""
    type="checkbox"
  />
  <div
    class="toggler"
  >
    <span
      class="label"
    >
      Included
    </span>
    <span
      class="label checked"
    >
      Excluded
    </span>
  </div>
</div>
`;

exports[`Toggler renders within text 1`] = `
<div>
  <span>
    Fees 
  </span>
  <div
    aria-hidden="true"
    class="root"
    role="presentation"
  >
    <input
      class="input"
      readonly=""
      type="checkbox"
    />
    <div
      class="toggler"
    >
      <span
        class="label"
      >
        Included
      </span>
      <span
        class="label checked"
      >
        Excluded
      </span>
    </div>
  </div>
  <span>
     from the amount
  </span>
</div>
`;
